fixed: favorite clipping in desktop env

--- a/src/components/SelectedCardList/SelectedCardList.scss
+++ b/src/components/SelectedCardList/SelectedCardList.scss
@@ -17,7 +17,7 @@
   display: grid;
   width: fit-content;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 70px;
+  grid-template-rows: 90px;
   width: 100%;
   grid-gap: 4px;
   justify-content: space-evenly;
